--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -15,7 +15,6 @@
       <img src="./assets/shared/logo.svg" class="logo-img" alt="logo" />
       <div class="hr"></div>
     </div>
-
   <div class="nav-div">
 
 <nav class="nav-menu">
@@ -43,4 +42,9 @@
   
 </div>
 </body>
+
+<script></script>
 </html>
+
+
+
