--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -18,8 +18,8 @@
   <div class="nav-div">
 
 <nav class="nav-menu">
-  <a class="nav-links"><span>00</span> Home</a>
-  <a class="nav-links"><span>01</span> Destination</a>
+  <a class="nav-links active" href="#"><span>00</span> Home</a>
+  <a class="nav-links" href="destination.html"><span>01</span> Destination</a>
   <a class="nav-links"><span>02</span> Crew</a>
   <a class="nav-links"><span>03</span> Technology</a>
 </nav>
