--- a/crew.html
+++ b/crew.html
@@ -8,8 +8,7 @@
   
   <title>Space tourism website</title>
 </head>
-<body class="index-bg">
-
+<body class="crew-bg">
   <div class="header">
     <div class="logo">
       <img src="./assets/shared/logo.svg" class="logo-img" alt="logo" />
@@ -18,33 +17,21 @@
   <div class="nav-div">
 
 <nav class="nav-menu">
-  <a class="nav-links active" href="#"><span>00</span> Home</a>
+  <a class="nav-links" href="index.html"><span>00</span> Home</a>
   <a class="nav-links" href="destination.html"><span>01</span> Destination</a>
-  <a class="nav-links"><span>02</span> Crew</a>
-  <a class="nav-links"><span>03</span> Technology</a>
+  <a class="nav-links active" href="#"><span>02</span> Crew</a>
+  <a class="nav-links" href="technology.html"><span>03</span> Technology</a>
 </nav>
 </div>
 </div>
-<div class="index-text">
 
-  <h3>So, you want to travel to</h3>
-  <h1>Space</h1>
-    <p> 
-      Let’s face it; if you want to go to space, you might as well genuinely go to 
-      outer space and not hover kind of on the edge of it. Well sit back, and relax 
-      because we’ll give you a truly out of this world experience!
-    </p>
-</div>
+  02 Meet your crew
 
-<div class="explore">
+  Flight Engineer
+  Anousheh Ansari
 
-  <p>Explore</p>
-  
-</div>
+  Anousheh Ansari is an Iranian American engineer and co-founder of Prodea Systems. 
+  Ansari was the fourth self-funded space tourist, the first self-funded woman to 
+  fly to the ISS, and the first Iranian in space. 
 </body>
-
-<script></script>
 </html>
-
-
-
