--- a/destination.html
+++ b/destination.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
   
-  <title>Frontend Mentor | Space tourism website</title>
+  <title>Space tourism website</title>
 </head>
 <body class="destination-bg">
 
@@ -20,8 +20,8 @@
 <nav class="nav-menu">
   <a class="nav-links" href="index.html"><span>00</span> Home</a>
   <a class="nav-links active" href="#"><span>01</span> Destination</a>
-  <a class="nav-links"><span>02</span> Crew</a>
-  <a class="nav-links"><span>03</span> Technology</a>
+  <a class="nav-links" href="crew.html"><span>02</span> Crew</a>
+  <a class="nav-links" href="technology.html"><span>03</span> Technology</a>
 </nav>
 </div>
 </div>
