--- a/technology.html
+++ b/technology.html
@@ -3,17 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+  <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
   
-  <title>Frontend Mentor | Space tourism website</title>
+  <title>Space tourism website</title>
 </head>
-<body>
+<body class="technology-bg">
+  <div class="header">
+    <div class="logo">
+      <img src="./assets/shared/logo.svg" class="logo-img" alt="logo" />
+      <div class="hr"></div>
+    </div>
+  <div class="nav-div">
 
-  00 Home
-  01 Destination
-  02 Crew
-  03 Technology
+<nav class="nav-menu">
+  <a class="nav-links" href="index.html"><span>00</span> Home</a>
+  <a class="nav-links" href="destination.html"><span>01</span> Destination</a>
+  <a class="nav-links" href="crew.html"><span>02</span> Crew</a>
+  <a class="nav-links active" href="#"><span>03</span> Technology</a>
+</nav>
+</div>
+</div>
 
   03 Space launch 101
 
