--- a/destination.html
+++ b/destination.html
@@ -29,7 +29,7 @@
 <main class="destination-main">
 <div class="destination-img-div">
 
-  <h2>01 Pick your destination</h2>
+  <h2 class="headers">01 Pick your destination</h2>
   
   
   <img src="./assets/destination/image-mars.webp" alt="destination" />
