--- a/crew.html
+++ b/crew.html
@@ -24,14 +24,25 @@
 </nav>
 </div>
 </div>
+<main class="crew-main">
 
-  02 Meet your crew
+ <div class="crew-info">
 
-  Flight Engineer
-  Anousheh Ansari
+   <h2 class="headers">02 Meet your crew</h2>
+   
+   
+   <h4 id="position">Flight Engineer</h4>
+   <h1 id="crew-member">Anousheh Ansari</h1>
+   <p class="crew-member-info">
 
-  Anousheh Ansari is an Iranian American engineer and co-founder of Prodea Systems. 
-  Ansari was the fourth self-funded space tourist, the first self-funded woman to 
-  fly to the ISS, and the first Iranian in space. 
+   Anousheh Ansari is an Iranian American engineer and co-founder of Prodea Systems. 
+   Ansari was the fourth self-funded space tourist, the first self-funded woman to 
+   fly to the ISS, and the first Iranian in space. 
+   </p>
+  </div> 
+  <div class="crew-images">
+<img src="./assets/crew/image-anousheh-ansari.webp" alt="crew Member" />
+</div>
+</main>
 </body>
 </html>
