--- a/technology.html
+++ b/technology.html
@@ -25,18 +25,34 @@
 </div>
 </div>
 
-  03 Space launch 101
+<main class="technology-main">
 
-  1
-  2
-  3
+<div>
+  <h2 class="headers">03 Space launch 101</h2>
 
-  The terminology...
-  Launch vehicle
+  <div class="technology-info">
+  <div>
 
+  <div class="square active">1</div>
+  <div class="square">2</div>
+  <div class="square">3</div>
+ 
+  </div>
+<div>
+  <h5 class="terminology">The terminology...</h5>
+  <h1 id="technology-name">Launch vehicle</h1>
+  <p class="about-technology">
   A launch vehicle or carrier rocket is a rocket-propelled vehicle used to carry a 
   payload from Earth's surface to space, usually to Earth orbit or beyond. Our 
   WEB-X carrier rocket is the most powerful in operation. Standing 150 metres tall, 
   it's quite an awe-inspiring sight on the launch pad!
+</p>
+</div>
+</div>
+</div>
+<div>
+  <img src="./assets/technology/image-launch-vehicle-portrait.jpg" alt="technology" />
+</div>
+</main>
 </body>
 </html>
