--- a/destination.html
+++ b/destination.html
@@ -36,7 +36,7 @@
 </div>
   <div class="about-destination">
 <div class="destination-menu">
-  <a class="dest-link" id="moon" onclick="destinationChanger(0)">Moon</a>
+  <a class="dest-link active" id="moon" onclick="destinationChanger(0)">Moon</a>
   <a class="dest-link" id="mars" onclick="destinationChanger(1)">Mars</a>
   <a class="dest-link" id="europa" onclick="destinationChanger(2)">Europa</a>
   <a class="dest-link" id="titan" onclick="destinationChanger(3)">Titan</a>
