--- a/crew.html
+++ b/crew.html
@@ -57,6 +57,6 @@
 
 
 <script type="text/javascript" src="data.json"></script>
-<script type="text/javascript" src="Js.js"></script>
+<script type="text/javascript" src="js/Js.js"></script>
 </body>
 </html>
