--- a/destination.html
+++ b/destination.html
@@ -68,6 +68,6 @@
 </main>
 
 <script type="text/javascript" src="data.json"></script>
-<script type="text/javascript" src="Js.js"></script>
+<script type="text/javascript" src="js/Js.js"></script>
 </body>
 </html>
