index- mobile version

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
       <img src="./assets/shared/logo.svg" class="logo-img" alt="logo" />
       <div class="hr"></div>
     </div>
+
+  <img class="hamburger-menu" src="./assets/shared/icon-hamburger.svg">
+  <img class="hamburger-menu-close" src="./assets/shared/icon-close.svg">
+
+
   <div class="nav-div">
 
 <nav class="nav-menu">
@@ -25,8 +30,12 @@
 </nav>
 </div>
 </div>
-<div class="index-text">
 
+
+
+
+<div class="index-text">
+<div class="index-space-text">
   <h3>So, you want to travel to</h3>
   <h1>Space</h1>
     <p> 
@@ -40,6 +49,7 @@
 
   <p>Explore</p>
   
+</div>
 </div>
 </body>
 
