--- a/index.html
+++ b/index.html
@@ -16,9 +16,13 @@
       <div class="hr"></div>
     </div>
 
-  <img class="hamburger-menu" src="./assets/shared/icon-hamburger.svg">
-  <img class="hamburger-menu-close" src="./assets/shared/icon-close.svg">
-
+  <img class="hamburger-menu" src="./assets/shared/icon-hamburger.svg" onclick="showMenu()">
+  <nav class="nav-menu-m d-none">
+    <a class="nav-links active" href="#"><span>00</span> Home</a>
+    <a class="nav-links" href="destination.html"><span>01</span> Destination</a>
+    <a class="nav-links" href="crew.html"><span>02</span> Crew</a>
+    <a class="nav-links" href="technology.html"><span>03</span> Technology</a>
+  </nav>
 
   <div class="nav-div">
 
@@ -51,6 +55,8 @@
   
 </div>
 </div>
+<script type="text/javascript" src="js/Js.js"></script>
+
 </body>
 
 </html>
