--- a/destination.html
+++ b/destination.html
@@ -8,13 +8,22 @@
   
   <title>Space tourism website</title>
 </head>
-<body class="destination-bg">
+<body class="destination-bg background">
 
   <div class="header">
     <div class="logo">
       <img src="./assets/shared/logo.svg" class="logo-img" alt="logo" />
       <div class="hr"></div>
     </div>
+
+
+    <img class="hamburger-menu" src="./assets/shared/icon-hamburger.svg" onclick="showMenu()">
+  <nav class="nav-menu-m d-none">
+    <a class="nav-links active" href="#"><span>00</span> Home</a>
+    <a class="nav-links" href="destination.html"><span>01</span> Destination</a>
+    <a class="nav-links" href="crew.html"><span>02</span> Crew</a>
+    <a class="nav-links" href="technology.html"><span>03</span> Technology</a>
+  </nav>
   <div class="nav-div">
 
 <nav class="nav-menu">
