--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   <title>Space tourism website</title>
 </head>
-<body class="index-bg">
+<body class="index-bg background">
 
   <div class="header">
     <div class="logo">
