--- a/crew.html
+++ b/crew.html
@@ -17,9 +17,9 @@
 
     <img class="hamburger-menu" src="./assets/shared/icon-hamburger.svg" onclick="showMenu()">
     <nav class="nav-menu-m d-none">
-      <a class="nav-links active" href="#"><span>00</span> Home</a>
+      <a class="nav-links" href="index.html"><span>00</span> Home</a>
       <a class="nav-links" href="destination.html"><span>01</span> Destination</a>
-      <a class="nav-links" href="crew.html"><span>02</span> Crew</a>
+      <a class="nav-links active" href="#"><span>02</span> Crew</a>
       <a class="nav-links" href="technology.html"><span>03</span> Technology</a>
     </nav>
 
@@ -35,7 +35,14 @@
 </div>
 <main class="crew-main">
 
+  <div class="crew-images">
+    <img src="./assets/crew/image-anousheh-ansari.webp" alt="crew Member" id="crewMemberImg" />
+    </div>
+
  <div class="crew-info">
+
+
+
 
    <h2 class="headers">02 Meet your crew</h2>
    
@@ -57,9 +64,7 @@
 
    </div>
   </div> 
-  <div class="crew-images">
-<img src="./assets/crew/image-anousheh-ansari.webp" alt="crew Member" id="crewMemberImg" />
-</div>
+ 
 
 
 </main>
