--- a/destination.html
+++ b/destination.html
@@ -19,8 +19,8 @@
 
     <img class="hamburger-menu" src="./assets/shared/icon-hamburger.svg" onclick="showMenu()">
   <nav class="nav-menu-m d-none">
-    <a class="nav-links active" href="#"><span>00</span> Home</a>
-    <a class="nav-links" href="destination.html"><span>01</span> Destination</a>
+    <a class="nav-links" href="index.html"><span>00</span> Home</a>
+    <a class="nav-links active" href="#"><span>01</span> Destination</a>
     <a class="nav-links" href="crew.html"><span>02</span> Crew</a>
     <a class="nav-links" href="technology.html"><span>03</span> Technology</a>
   </nav>
