--- a/technology.html
+++ b/technology.html
@@ -40,14 +40,19 @@
   <h2 class="headers">03 Space launch 101</h2>
 
   <div class="technology-info">
-  <div>
+
+    <div class="technology-img-div">
+      <img src="./assets/technology/image-launch-vehicle-portrait.jpg" alt="technology" id="technologyImg" />
+    </div>
+
+  <div class="technology-menu">
 
   <div class="square active" id="launchVehicle" onclick="technologyChanger(0)">1</div>
   <div class="square" id="capsule" onclick="technologyChanger(1)">2</div>
   <div class="square" id="spaceport" onclick="technologyChanger(2)">3</div>
  
   </div>
-<div>
+<div class="technology-text">
   <h5 class="terminology">The terminology...</h5>
   <h1 id="technology-name">Launch vehicle</h1>
   <p class="about-technology" id="aboutTechnology">
@@ -59,9 +64,7 @@
 </div>
 </div>
 </div>
-<div>
-  <img src="./assets/technology/image-launch-vehicle-portrait.jpg" alt="technology" id="technologyImg" />
-</div>
+
 </main>
 
 <script type="text/javascript" src="data.json"></script>
