--- a/crew.html
+++ b/crew.html
@@ -70,7 +70,7 @@
 </main>
 
 
-<script type="text/javascript" src="data.json"></script>
-<script type="text/javascript" src="js/Js.js"></script>
+<script type="text/javascript" src="./data.json"></script>
+<script type="text/javascript" src="./js/Js.js"></script>
 </body>
 </html>
