--- a/destination.html
+++ b/destination.html
@@ -76,7 +76,7 @@
 </div>
 </main>
 
-<script type="text/javascript" src="data.json"></script>
-<script type="text/javascript" src="js/Js.js"></script>
+<script type="text/javascript" src="./data.json"></script>
+<script type="text/javascript" src="./js/Js.js"></script>
 </body>
 </html>
