--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
   
   <title>Space tourism website</title>
@@ -55,7 +55,7 @@
   
 </div>
 </div>
-<script type="text/javascript" src="js/Js.js"></script>
+<script type="text/javascript" src="./js/Js.js"></script>
 
 </body>
 
